--- a/REACT/06-Leson/class-task-app/src/App.css
+++ b/REACT/06-Leson/class-task-app/src/App.css
@@ -1,38 +1,44 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  width: 80%;
+  margin: 0 auto;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  min-height: 100px;
+  border-bottom: 1px solid grey;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+h2,
+li {
+  text-align: left;
+}
+.show-list-container {
+  margin: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: center;
+}
+
+.user-container {
+  display: grid;
+  grid-template-columns: auto;
+  align-items: center;
+  border: 1px solid grey;
+  margin: 10px;
+  padding: 20px;
+  text-align: center;
+  width: 300px;
+  height: 200px;
+}
+
+.user-container:hover {
+  cursor: pointer;
 }
